[gd_scene load_steps=5 format=3 uid="uid://bu3fc5k16xb1n"]

[ext_resource type="Script" path="res://Scenes/creature.gd" id="1_ajt1m"]
[ext_resource type="Texture2D" uid="uid://bslttmpxsltts" path="res://Creatures/Creature Textures/templategrid_albedo.png" id="1_e8tox"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_p80ng"]
friction = 0.6
bounce = 0.3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5xxl"]
size = Vector2(42, 41)

[node name="Creature" type="RigidBody2D"]
collision_layer = 2
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_p80ng")
lock_rotation = true
script = ExtResource("1_ajt1m")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.01, 0.01)
texture = ExtResource("1_e8tox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_t5xxl")

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
